# conversational-emotion-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
config/: emotions_config.yaml
docs/: DEPLOYMENT.md  architecture.md
security/: security_config.py
src/: __init__.py  conversation_manager.py  emotion_analyzer.py  optimization.py  performance.py  response_generator.py  utils.py  visualization.py
tests/: __init__.py  conftest.py  test_app.py  test_complete_system.py  test_conversation_manager.py  test_emotion_analyzer.py  test_integration_full.py  test_response_generator.py  test_utils.py
